--- a/app.json
+++ b/app.json
@@ -20,6 +20,9 @@
       "supportsTablet": true
     },
     "android": {
+      "permissions": [ "ACCESS_COARSE_LOCATION",
+        "ACCESS_FINE_LOCATION",
+        "ACCESS_BACKGROUND_LOCATION", "READ_CONTACTS" ],
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
