--- a/package.json
+++ b/package.json
@@ -8,12 +8,29 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-regular-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-native-fontawesome": "^0.2.6",
+    "@react-native-community/geolocation": "^2.0.2",
     "expo": "~40.0.0",
+    "expo-font": "^9.0.0",
+    "expo-permissions": "~10.0.0",
     "expo-status-bar": "~1.0.3",
+    "node-sass": "^5.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-contacts": "^7.0.0",
+    "react-native-device-info": "^8.0.8",
+    "react-native-geolocation-service": "^5.2.0",
+    "react-native-maps": "^0.27.1",
+    "react-native-sass-transformer": "^1.4.0",
+    "react-native-svg": "^12.1.1-0",
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-web": "^0.15.6"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
